--- a/app/globals.scss
+++ b/app/globals.scss
@@ -53,3 +53,35 @@ a {
     color-scheme: dark;
   }
 }
+
+form {
+  display: flex;
+  flex-direction: column;
+  max-width: 480px;
+  margin-bottom: 48px;
+
+  label {
+    margin-bottom: 8px;
+    margin-top: 16px;
+  }
+
+  input[type='submit'] {
+    margin-top: 24px;
+  }
+}
+
+input[type='color'] {
+  width: 35px;
+  height: 35px;
+  padding: 0;
+}
+
+input,
+button,
+input[type='submit'] {
+  padding: 8px 12px;
+}
+
+span[aria-description='form-error'] {
+  color: red;
+}
